--- a/CommentForm/Views/Comments/Index.cshtml
+++ b/CommentForm/Views/Comments/Index.cshtml
@@ -8,44 +8,33 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Procedure.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Priority)
-        </th>
-        <th></th>
-    </tr>
+</p>            
+        
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </h3>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Procedure.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Priority)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CommentID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CommentID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CommentID })
-        </td>
-    </tr>
-}
+                    <h4>
+                        @Html.DisplayFor(modelItem => item.Procedure.Title)
+                    </h4>
 
-</table>
+                    <p>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </p>
+
+                    <p>
+                        <span class="label label-default"> @Html.DisplayNameFor(model => model.Priority) @Html.DisplayFor(modelItem => item.Priority)  </span>
+                    </p>                                           
+                        @Html.ActionLink("Details", "Details", new { id = item.CommentID }, new { @class = "btn btn-primary", role = "button" })                  
+                </div>
+            </div>
+        </div>
+    }
+</div>
+
